@@ -15,7 +15,7 @@ namespace Ermes
         /// All project's assembly versions are changed when this value is changed.
         /// It's also shown in the web page.
         /// </summary>
-        public const string Version = "1.0.0";
+        public const string Version = "1.5.5";
 
         /// <summary>
         /// Gets release (last build) date of the application.
