@@ -36,6 +36,8 @@
     <Compile Include="Migrations\20210401083518_Activity_Hazard_Column.Designer.cs" />
     <Compile Include="Migrations\20210513102943_Person_IsFirstLogin_Added.cs" />
     <Compile Include="Migrations\20210513102943_Person_IsFirstLogin_Added.Designer.cs" />
+    <Compile Include="Migrations\20210518073239_ClientIpAddress_Removed.cs" />
+    <Compile Include="Migrations\20210518073239_ClientIpAddress_Removed.Designer.cs" />
     <Compile Include="Migrations\ErmesDbContextModelSnapshot.cs" />
     <Compile Include="Migrations\Seed\ModelBuilderExtensions.cs" />
   </ItemGroup>
