@@ -1,0 +1,24 @@
+﻿using Microsoft.EntityFrameworkCore.Migrations;
+
+namespace Ermes.Migrations
+{
+    public partial class ClientIpAddress_Removed : Migration
+    {
+        protected override void Up(MigrationBuilder migrationBuilder)
+        {
+            migrationBuilder.DropColumn(
+                name: "ClientIpAddress",
+                table: "entitychangesets");
+        }
+
+        protected override void Down(MigrationBuilder migrationBuilder)
+        {
+            migrationBuilder.AddColumn<string>(
+                name: "ClientIpAddress",
+                table: "entitychangesets",
+                type: "character varying(64)",
+                maxLength: 64,
+                nullable: true);
+        }
+    }
+}
