@@ -1,12 +1,16 @@
 ﻿@using Ermes.Web.Startup
-@{
-    ViewBag.ActiveMenu = PageNames.About;
-}
-
+@{ ViewBag.ActiveMenu = PageNames.About; }
+@using Ermes
 <h2>@L("About")!</h2>
 
 <div class="row">
     <div class="col-lg-12">
         @L("About_Description")
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <p>v@(AppVersionHelper.Version) </p>
+        <p>Build Date: @AppVersionHelper.ReleaseDate.ToString("dd/MM/yyyy hh:mm:ss")</p>
     </div>
 </div>
