@@ -1,6 +1,7 @@
 Ver.
 ---------------------------
 - Feature - IsFirstLogin field added to Person, update of ImportApiService, Permission initializations (migration added) (#25)
+- Feature - ClientIpAddress property removed (migration added) (#24)
 
 Ver. 1.5.4 - 2021-04-09
 ---------------------------
